--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-header></app-header>
 <div style="text-align:center">
-  <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
   <h1>
     Welcome to {{ title }}!
   </h1>
