Translate buttons in navbar

--- a/src/app/components/master/header/header.component.html
+++ b/src/app/components/master/header/header.component.html
@@ -4,6 +4,14 @@
   </button>
   <span>My App</span>
   <span class="example-spacer"></span>
+
+  <button mat-raised-button (click)="changeLanguage('es')" [ngClass]="{'active':currentLanguage('es')}">
+    ES
+  </button>
+  <button mat-raised-button (click)="changeLanguage('en')" [ngClass]="{'active':currentLanguage('en')}">
+    EN
+  </button>
+
   <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
     <mat-icon>favorite</mat-icon>
   </button>
