--- a/src/app/components/security/login/login.component.html
+++ b/src/app/components/security/login/login.component.html
@@ -1,19 +1,19 @@
 <mat-toolbar>
-  <span>LOGIN</span>
+  <span>{{ 'header.login' | translate }}</span>
 </mat-toolbar>
 <mat-card class="my-card">
    <mat-card-content>
       <form class="my-form" (ngSubmit)="onLogin(f)" #f="ngForm">
          <mat-form-field class="full-width">
-            <mat-label>Email</mat-label>
-            <input  matInput type="email" placeholder="Email" name="email" required ngModel>
+            <mat-label>{{ 'register.email' | translate }}</mat-label>
+            <input  matInput type="email" placeholder="{{ 'register.email' | translate }}" name="email" required ngModel>
          </mat-form-field>
          <mat-form-field class="full-width">
-            <mat-label>Password</mat-label>
-            <input  matInput type="password" placeholder="Password" name="password" required ngModel>
+            <mat-label>{{ 'register.password' | translate }}</mat-label>
+            <input  matInput type="password" placeholder="{{ 'register.password' | translate }}" name="password" required ngModel>
          </mat-form-field>
          <mat-card-actions>
-          <button mat-raised-button type="submit" color="primary">LOGIN</button>
+          <button mat-raised-button type="submit" color="primary">{{ 'header.login' | translate }}</button>
        </mat-card-actions>
       </form>
    </mat-card-content>
