--- a/src/app/components/rubric/rubric-list/rubric-list.component.html
+++ b/src/app/components/rubric/rubric-list/rubric-list.component.html
@@ -8,13 +8,13 @@
     <!-- ID Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-      <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      <td mat-cell *matCellDef="let row"> {{row._id}} </td>
     </ng-container>
 
     <!-- description Column -->
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-      <td mat-cell *matCellDef="let row"> {{row.description}}% </td>
+      <td mat-cell *matCellDef="let row"> {{row.description}} </td>
     </ng-container>
 
     <!-- Name Column -->
