--- a/src/app/components/rubric/rubric-list/rubric-list.component.html
+++ b/src/app/components/rubric/rubric-list/rubric-list.component.html
@@ -1,3 +1,7 @@
+<mat-toolbar-row>
+  <h2>{{ 'teacher.my_rubrics' | translate }}</h2>
+</mat-toolbar-row>
+
 <mat-form-field>
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
 </mat-form-field>
