--- a/src/app/components/rubric/rubric-create/rubric-create.component.html
+++ b/src/app/components/rubric/rubric-create/rubric-create.component.html
@@ -25,16 +25,21 @@
           </mat-error>
         </mat-form-field>
 
+        <div>
+          {{ selected_competences.length | json }}
+        </div>
         <mat-accordion class="example-headers-align">
-          <mat-expansion-panel *ngFor="let area of getAreas()">
+          <mat-expansion-panel *ngFor="let area of getAreas(); let i = index">
             <mat-expansion-panel-header>
               <mat-panel-title>
                 {{area.name}}
               </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <mat-selection-list>
-              <mat-list-option *ngFor="let competence of getAreaCompetences(area)">
+            <mat-selection-list #i (selectionChange)="onSelection($event, i.selectedOptions)">
+              <mat-list-option *ngFor="let competence of getAreaCompetences(area)"
+                id="{{competence._id}}"
+                [value]="competence">
                 {{competence.name}}
               </mat-list-option>
             </mat-selection-list>
@@ -47,5 +52,6 @@
 
     </mat-card>
 
+    <pre>{{rubricForm?.value | json}}</pre>
   </div>
 </div>
