Styles and colors of rubric form

--- a/src/app/components/rubric/rubric-create/rubric-create.component.css
+++ b/src/app/components/rubric/rubric-create/rubric-create.component.css
@@ -5,11 +5,21 @@
 }
 
 .rubric-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
-  }
-  
-  .form-field {
-    width: 100%;
-  }
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.form-field {
+  width: 100%;
+}
+
+.competences-div {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.mat-expansion-panel-header-title {
+  font-size: large;
+  font-weight: bold;
+}
