Login with Google Classroom

--- a/src/app/components/security/login/login.component.html
+++ b/src/app/components/security/login/login.component.html
@@ -19,6 +19,7 @@
    </mat-card-content>
    <mat-divider></mat-divider>
    <mat-card-footer>
+      <a href={{OAUTH_URL}}>Login with Google</a>
       <p>{{ 'login.dont_have_account' | translate }}</p>
       <a mat-raised-button color="primary" routerLink="/register">{{ 'header.register' | translate }}</a>
    </mat-card-footer>
