Saving tokens & calling courses list

--- a/src/app/components/master/sidenav/sidenav.component.html
+++ b/src/app/components/master/sidenav/sidenav.component.html
@@ -19,6 +19,10 @@
         <a routerLink="/teacher/rubrics/create">{{ 'teacher.create_rubric' | translate }}</a>
       </mat-list-item>
 
+      <h2 matSubheader> {{ 'header.courses' | translate }} </h2>
+      <mat-list-item>
+        <a routerLink="/teacher/courses/list">{{ 'teacher.my_courses' | translate }}</a>
+      </mat-list-item>
       <mat-divider></mat-divider>
 
       <h2 matSubheader> {{ 'header.profile' | translate }} </h2>
