--- a/src/app/components/course/course-list/course-list.component.html
+++ b/src/app/components/course/course-list/course-list.component.html
@@ -1,3 +1,16 @@
-<p>
-  course-list works!
-</p>
+<mat-card class="course-card" *ngFor="let course of courses">
+  <mat-card-header>
+    <mat-card-title>{{course.name}}</mat-card-title>
+    <mat-card-subtitle>{{course.room}}</mat-card-subtitle>
+  </mat-card-header>
+  
+  <mat-card-content>
+    <p>
+      {{course.description}}
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>LIKE</button>
+    <button mat-button>SHARE</button>
+  </mat-card-actions>
+</mat-card>
