Instaling flexModule and styling courses list

--- a/src/app/components/course/course-list/course-list.component.css
+++ b/src/app/components/course/course-list/course-list.component.css
@@ -1,8 +1,17 @@
 .course-card {
     max-width: 400px;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
   
   .example-header-image {
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
+  }
+
+  @media (max-width: 1279px){
+    .course-card {
+      max-width: 100%;
+      margin-top: 1rem;
+    }
   }
