--- a/src/app/components/course/course-list/course-list.component.html
+++ b/src/app/components/course/course-list/course-list.component.html
@@ -1,16 +1,22 @@
-<mat-card class="course-card" *ngFor="let course of courses">
-  <mat-card-header>
-    <mat-card-title>{{course.name}}</mat-card-title>
-    <mat-card-subtitle>{{course.room}}</mat-card-subtitle>
-  </mat-card-header>
-  
-  <mat-card-content>
-    <p>
-      {{course.description}}
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
-  </mat-card-actions>
-</mat-card>
+<mat-toolbar-row>
+  <h2>{{ 'teacher.my_courses' | translate }}</h2>
+</mat-toolbar-row>
+
+<div class="content" fxLayout="row" fxLayout.lt-md="column">
+  <mat-card fxFlex="20" class="course-card" *ngFor="let course of courses">
+    <mat-card-header>
+      <mat-card-title>{{course.name}}</mat-card-title>
+      <mat-card-subtitle>{{course.room}}</mat-card-subtitle>
+    </mat-card-header>
+    
+    <mat-card-content>
+      <p>
+        {{course.description}}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
