--- a/src/app/components/security/login/login.component.html
+++ b/src/app/components/security/login/login.component.html
@@ -1,26 +1,49 @@
 <mat-toolbar>
   <span>{{ 'header.login' | translate }}</span>
 </mat-toolbar>
-<mat-card class="my-card">
-   <mat-card-content>
-      <form class="my-form" (ngSubmit)="onLogin(f)" #f="ngForm">
-         <mat-form-field class="full-width">
-            <mat-label>{{ 'register.email' | translate }}</mat-label>
-            <input  matInput type="email" placeholder="{{ 'register.email' | translate }}" name="email" required ngModel>
-         </mat-form-field>
-         <mat-form-field class="full-width">
-            <mat-label>{{ 'register.password' | translate }}</mat-label>
-            <input  matInput type="password" placeholder="{{ 'register.password' | translate }}" name="password" required ngModel>
-         </mat-form-field>
-         <mat-card-actions>
-          <button mat-raised-button type="submit" color="primary">{{ 'header.login' | translate }}</button>
-       </mat-card-actions>
-      </form>
-   </mat-card-content>
-   <mat-divider></mat-divider>
-   <mat-card-footer>
-      <a href={{OAUTH_URL}}>Login with Google</a>
-      <p>{{ 'login.dont_have_account' | translate }}</p>
-      <a mat-raised-button color="primary" routerLink="/register">{{ 'header.register' | translate }}</a>
-   </mat-card-footer>
-</mat-card>
+
+<div class="content" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center" >
+   <mat-card fxFlex="50" class="login-card">
+      <mat-card-content>
+         <h2>¡Bienvenido a DigComp-Rubrics!</h2>
+         <p>Una herramienta diseñada para facilitar la evaluación de la
+            competencia digital en el aula mediante rúbricas, implementando
+            el Marco de Referencia Europeo DIGCOMP.</p>
+      </mat-card-content>
+      <mat-divider></mat-divider>
+      <mat-card-footer>
+         <a href="{{OAUTH_URL}}" mat-button style="padding: 1rem;">
+            <mat-icon style="width: 50px; height:30px"
+                      svgIcon="googlelogo"></mat-icon> Login With Google
+         </a>
+         
+      </mat-card-footer>
+   </mat-card>
+</div>
+
+<!--  FORMULARIO DE LOGIN   -->
+<!--<div class="content" fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center" >
+   <mat-card fxFlex="50" class="login-card">
+      <mat-card-content>
+         <form class="my-form" (ngSubmit)="onLogin(f)" #f="ngForm">
+            <mat-form-field class="full-width">
+               <mat-label>{{ 'register.email' | translate }}</mat-label>
+               <input  matInput type="email" placeholder="{{ 'register.email' | translate }}" name="email" required ngModel>
+            </mat-form-field>
+            <mat-form-field class="full-width">
+               <mat-label>{{ 'register.password' | translate }}</mat-label>
+               <input  matInput type="password" placeholder="{{ 'register.password' | translate }}" name="password" required ngModel>
+            </mat-form-field>
+            <mat-card-actions>
+             <button mat-raised-button type="submit" color="primary">{{ 'header.login' | translate }}</button>
+          </mat-card-actions>
+         </form>
+      </mat-card-content>
+      <mat-divider></mat-divider>
+      <mat-card-footer>
+         <a href={{OAUTH_URL}}>Login with Google</a>
+         <p>{{ 'login.dont_have_account' | translate }}</p>
+         <a mat-raised-button color="primary" routerLink="/register">{{ 'header.register' | translate }}</a>
+      </mat-card-footer>
+   </mat-card>
+</div>-->
