--- a/src/app/components/assessment/assessment-create/assessment-create.component.css
+++ b/src/app/components/assessment/assessment-create/assessment-create.component.css
@@ -1,3 +1,18 @@
+.assessment-container {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.select-container {
+  margin-top: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.select-container mat-form-field{
+  margin-right: 2rem;
+}
+
 table {
     width: 100%;
   }
