--- a/src/app/components/assessment/assessment-create/assessment-create.component.html
+++ b/src/app/components/assessment/assessment-create/assessment-create.component.html
@@ -15,6 +15,7 @@
     </mat-form-field>
 
     <mat-form-field fxFlex="30" appearance="fill">
+
       <mat-label>{{'assessment.select_activity' | translate}}</mat-label>
       <mat-select (selectionChange)="onActivityChange($event)" [(value)]="selected_activity">
         <mat-option *ngFor="let activity of activities" [value]="activity._id">
@@ -37,16 +38,21 @@
   <div>
     <table mat-table [dataSource]="dataSource">
   
-      <!-- Name Column -->
+      <!-- Title Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> NAME </th>
-        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+        <th mat-header-cell class="competence-header" *matHeaderCellDef> {{'competence.competence' | translate}} </th>
+        <td mat-cell class="competence-cell" *matCellDef="let row" [style.background-color]="row.area.colorCode"> {{row.name}} </td>
       </ng-container>
   
-      <!-- Name Column -->
+      <!-- Level Column -->
       <ng-container *ngFor="let level of levelsArray" matColumnDef="{{level}}">
         <th mat-header-cell *matHeaderCellDef> {{level}} </th>
-        <td mat-cell *matCellDef="let row"> {{row.proficiencyLevels[level-1].descriptor}} </td>
+        <td mat-cell *matCellDef="let row"
+          [ngClass]="{hovered: row.proficiencyLevels[level-1].hovered,
+            selected: row.proficiencyLevels[level-1].selected}"
+          (mouseover)="row.proficiencyLevels[level-1].hovered = true"
+          (mouseout)="row.proficiencyLevels[level-1].hovered = false"
+          (click)="onSelectLevel(row, row.proficiencyLevels[level-1])"> {{row.proficiencyLevels[level-1].descriptor}} </td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -55,6 +61,13 @@
     </table>
   
   </div>
-</div>
 
-<pre>{{ levelsArray }}</pre>
+  <div class="select-container" fxLayout="row">
+    <mat-form-field fxFlex="80" class="form-field">
+      <mat-label> {{ 'assessment.comments' | translate }}
+      </mat-label>
+      <textarea matInput rows="5" [(ngModel)]="comment"></textarea>
+    </mat-form-field>
+  </div>
+  
+</div>
