--- a/src/app/components/student/student-list-by-course/student-list-by-course.component.html
+++ b/src/app/components/student/student-list-by-course/student-list-by-course.component.html
@@ -2,35 +2,35 @@
   <h2>{{ 'teacher.students' | translate }}</h2>
 </mat-toolbar-row>
 
-<mat-form-field>
-  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-</mat-form-field>
-
-<div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort>
-
-    <!-- ID Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> NAME </th>
+<div class="container students-table-container" fxLayout="column" fxLayoutAlign="center">
+  <mat-form-field>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+  </mat-form-field>
+  
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+  
+      <!-- name Column -->
+    <ng-container matColumnDef="name" sticky>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{"student.name" | translate}} </th>
       <td mat-cell *matCellDef="let row"> {{row.name}} </td>
     </ng-container>
 
-    <!-- description Column -->
-    <ng-container matColumnDef="surname">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> SURNAME </th>
+    <!-- surname Column -->
+    <ng-container matColumnDef="surname" sticky>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{"student.surname" | translate}} </th>
       <td mat-cell *matCellDef="let row"> {{row.surname}} </td>
     </ng-container>
-
-    <!-- Name Column -->
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> EMAIL </th>
-      <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+      
+    <!-- Competence Column -->
+    <ng-container *ngFor="let competence of competences" matColumnDef="{{competence._id}}">
+      <th mat-header-cell *matHeaderCellDef [style.background-color]="competence.area.colorCode"> {{competence.name}} </th>
+      <td mat-cell *matCellDef="let row"> {{getStudentLevelInCompetence(row, competence._id) | number:'1.0-0'}} </td>
     </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;">
-    </tr>
-  </table>
-
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+      </tr>
+    </table>
+  </div>
 </div>
