--- a/src/app/components/master/sidenav/sidenav.component.html
+++ b/src/app/components/master/sidenav/sidenav.component.html
@@ -5,7 +5,7 @@
 
     <mat-toolbar>
       <mat-toolbar-row>
-        <h2 class="toolbar-title"> TFM DIGCOMP-RUBRICS </h2>
+        <h2 class="toolbar-title"> TFM DigComp-Rubrics </h2>
       </mat-toolbar-row>
     </mat-toolbar>
 
